# carbon

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  pre-commit_autoupdate.yml
carbon/: __init__.py  __main__.py  clusterconfig.py  comparisons.py  energy.py  intensity.py  job.py  node.py
carbon/data/: comparisons.csv  food.csv  travel.csv
clusters/: CX3.yaml  dummy.yaml
docs/: gen_ref_nav.py
tests/: test_carbon.py  test_energy.py  test_intensity.py  test_job.py  test_node.py
